# bazel-locale-repro

./: BUILD.bazel  Dockerfile  WORKSPACE.bazel  run.sh
