workspace(name = "repro")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_pkg",
    sha256 = "7fb0d3863139fbac72702bd478b9e7e7b6c05d9cc37198602b6ab7e8876b0e62",
    strip_prefix = "rules_pkg-02eb6cfd90b66df7c5d76b0c360d0e7f77212e1d",
    url = "https://github.com/bazelbuild/rules_pkg/archive/02eb6cfd90b66df7c5d76b0c360d0e7f77212e1d.tar.gz",
)

load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")

rules_pkg_dependencies()
